# robot-competition

./: .gitignore  README.md  ssh-robot.txt
objectdetection/src/: CMakeLists.txt  Map.cpp  Map.h  Masks.cpp  Masks.h  RangeFinder.cpp  RangeFinder.h  Robot.cpp  Robot.h  autonomous.cpp  autonomous.h  brain.cpp  brain.h  defines.h  detector.cpp  detector.h  main.cpp  odroid@192.168.43.199  serial.cpp  serial.h  simulation.cpp  simulation.h
python/: lin-cam.py  visualize.py
report/: examples.tex  header.tex  lmedoc.cls  rc-lit.bbl  rc-lit.tex  rc.bib  rc00.bbl  rc00.blg  rc00.dvi  rc00.tex  rc01.tex  rc02.tex  rc03.tex  rc04.tex  rc05.tex  rc06.tex  rc07.tex  resume.pages  tikz-pictures.tex
report/figures/: alternative.pdf_tex  alternative_for_presentation.pdf_tex  distances.pdf_tex  marxbot.pdf_tex  reward.pdf_tex  s_min_mu.pdf_tex
sketchbook/ArduinoMicro1/: ArduinoMicro1.ino  IR.cpp  IR.h  defines.h
sketchbook/ArduinoMicro1_libstuff/: ArduinoMicro1_libstuff.ino  Used Pins.txt  defines.h
sketchbook/ArduinoMicro2/: ArduinoMicro2.ino  MultiLinearCameraARD.h  defines.h  prior.h
sketchbook/ArduinoMicro2_Compass/: ArduinoMicro2_Compass.ino  MultiLinearCameraARD.cpp  defines.h  prior.h
sketchbook/ArduinoMicro2_sim/: ArduinoMicro2_sim.ino  prior.h
sketchbook/Localization/Localization/: Localization.ino  MultiLinearCameraARD.h  pose.h
sketchbook/Template/: template.ino
sketchbook/WTC/: Constants.h  IOpins.h  WTC.ino
sketchbook/drivers/IR/: IR.ino
sketchbook/drivers/US-1pinmode/: US-1pinmode.ino
sketchbook/drivers/compass/: compass.ino
sketchbook/drivers/compass_and_lincam/: compass_and_lincam.ino
sketchbook/drivers/linear_cameras/: linear_cameras.ino
vision/pics/: findsamples.m
vision/src/: CMakeLists.txt  Masks.cpp  Masks.h  RangeFinder.cpp  RangeFinder.h  bgpattern.cpp  bgpattern.h  defines.h  detector.cpp  detector.h  main.cpp
(+3 files in other folders)
